Set width for cart tracker in navbar to prevent shift

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -73,8 +73,10 @@ nav {
         align-items: center;
         align-items: flex-end;
         padding-bottom: 20px;
-        // .cart-count {
-        // }
+        .cart-count {
+          width: 1vw;
+          margin-right: 1px;
+        }
       }
     }
   }
